--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "output"
   ],
   "dependencies": {
-    "purescript-ide-purescript-core": "0.12.1",
+    "purescript-ide-purescript-core": "https://github.com/nwolverson/purescript-ide-purescript-core#8be882afdee142da0f07b57bf3e5a5fbcc32c74a",
     "purescript-aff-promise": "^0.5.0",
     "purescript-errors": "^3.0.0",
     "purescript-foreign-generic": "^5.0.0"
