--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build:server": "pulp build --no-psa --to server.js -m LanguageServer.IdePurescript.Main"
   },
   "dependencies": {
+    "purescript": "^0.11.6",
     "vscode-languageserver": "^3.2.0",
     "vscode-uri": "^1.0.0",
     "which": "^1.2.9"
