--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "build:server": "pulp --psc-package build --to server.js -m LanguageServer.IdePurescript.Main"
   },
   "dependencies": {
-    "purescript": "^0.11.6",
     "vscode-languageserver": "^3.2.0",
     "vscode-uri": "^1.0.0",
     "which": "^1.2.9"
@@ -32,6 +31,7 @@
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.1",
-    "typescript": "~2.4.1"
+    "typescript": "~2.4.1",
+    "purescript": "~0.11.6"    
   }
 }
