--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.1",
-    "typescript": "~2.4.1",
-    "purescript": "~0.11.6"
+    "psc-package": "^0.2.5",
+    "pulp": "^12.0.1",
+    "purescript": "~0.11.6",
+    "typescript": "~2.4.1"
   }
 }
