--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 dist: trusty
 sudo: required
 node_js: 8
-script:
+install:
   - npm install -g purescript@0.12.1
-  - npm install
+  - npm ci
