--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "install:psc": "psc-package install",
     "build": "run-s build:*",
     "build:tsc": "tsc -p src/LanguageServer/",
-    "build:server": "pulp --psc-package build --to server.js -m LanguageServer.IdePurescript.Main"
+    "build:server": "spago bundle-app  -t server.js -m LanguageServer.IdePurescript.Main"
   },
   "dependencies": {
     "vscode-languageserver": "^3.2.0",
@@ -32,8 +32,6 @@
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.1",
-    "psc-package": "^3.0.1",
-    "pulp": "^12.3.1",
     "typescript": "~2.4.1"
   }
 }
