--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "build:server": "spago bundle-app  -t server.js -m LanguageServer.IdePurescript.Main"
   },
   "dependencies": {
-    "vscode-languageserver": "^5.2.1",
+    "vscode-languageserver": "^6.1.1",
+    "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.1",
     "which": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.5",
-    "typescript": "~2.4.1"
+    "typescript": "^3.9.5"
   }
 }
