--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "server.js"
   ],
   "dependencies": {
+    "shell-quote": "^1.7.2",
     "uuid": "^3.3.2",
     "vscode-languageserver": "^6.1.1",
     "vscode-languageserver-textdocument": "^1.0.1",
