--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.5",
+    "purescript": "^0.13.8",
+    "spago": "^0.17.0",
     "typescript": "^3.9.5"
   }
 }
