--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,11 @@ jobs:
           draft: false
           prerelease: false
 
+      - name: Prepare Bundled JS
+        run: |
+          echo "#!/usr/bin/env node" > bundle.js
+          cat server.js >> bundle.js
+
       - name: Upload Release Asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -43,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./server.js
+          asset_path: ./bundle.js
           asset_name: purescript-language-server.js
           asset_content_type: text/javascript
