make tsc generate LF newlines

--- a/src/LanguageServer/tsconfig.json
+++ b/src/LanguageServer/tsconfig.json
@@ -1,8 +1,9 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES5",
-		"sourceMap": false,
-        "noImplicitAny": true
-	}
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "ES5",
+    "sourceMap": false,
+    "noImplicitAny": true,
+    "newLine": "LF"
+  }
 }
