--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: purescript-contrib/setup-purescript@main
-
-      - uses: actions/setup-node@v1
+      - uses: nwolverson/setup-purescript@30d9b862f160b3a09a21a6457d6bc0d1ac9e92f3
         with:
-          node-version: "12"
+          purescript: "0.14.4"
+          spago: "latest"
+
+      # - uses: actions/setup-node@v1
+      #   with:
+      #     node-version: "12"
 
       - name: Install dependencies
         run: |
-          npm ci
+          npm ci --no-optional
 
       - name: Build source
         run: npm run-script build
