--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "license": "MIT",
   "main": "./server.js",
   "bin": "./cli.js",
+  "engines": {
+    "node": "12"
+  },
   "scripts": {
     "prepare": "run-s install:* build",
     "install:spago": "spago install",
@@ -29,8 +32,10 @@
     "server.js"
   ],
   "dependencies": {
+    "@parcel/config-default": "^2.0.0-rc.0",
     "shell-quote": "^1.7.2",
     "uuid": "^3.3.2",
+    "vscode-jsonrpc": "^5.0.1",
     "vscode-languageserver": "^6.1.1",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.1",
@@ -39,8 +44,7 @@
   "devDependencies": {
     "@types/node": "7.0.32",
     "npm-run-all": "^4.1.5",
-    "purescript": "^0.14.0",
-    "spago": "^0.17.0",
     "typescript": "^3.9.5"
-  }
+  },
+  "optionalDependencies": {}
 }
