--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
   "engines": {
     "node": "12"
   },
+  "targets": {
+    "main": {
+      "includeNodeModules": true,
+      "optimize": true,
+      "sourceMap": false
+    }
+  },
   "scripts": {
     "prepare": "run-s install:* build",
     "install:spago": "spago install",
