--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "server.js"
   ],
   "dependencies": {
-    "@parcel/config-default": "^2.0.0-rc.0",
     "shell-quote": "^1.7.2",
     "uuid": "^3.3.2",
     "vscode-jsonrpc": "^5.0.1",
@@ -53,5 +52,8 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^3.9.5"
   },
-  "optionalDependencies": {}
+  "optionalDependencies": {
+    "purescript": "0.14.4",
+    "spago": "0.20.3"
+  }
 }
