--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   "dependencies": {
     "shell-quote": "^1.7.2",
     "uuid": "^3.3.2",
-    "vscode-jsonrpc": "^5.0.1",
-    "vscode-languageserver": "^6.1.1",
+    "vscode-jsonrpc": "^8.0.0-next.2",
+    "vscode-languageserver": "^8.0.0-next.2",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.1",
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@types/node": "7.0.32",
+    "@types/node": "^16.9.6",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.9.5"
   },
