--- a/src/LanguageServer/tsconfig.json
+++ b/src/LanguageServer/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "ES5",
     "sourceMap": false,
     "noImplicitAny": true,
-    "newLine": "LF"
+    "newLine": "LF",
+    "lib": ["es2015"]
   }
 }
