--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "@rowtype-yoga/prettier-plugin-purescript": "^1.11.2",
     "@types/node": "^16.9.6",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
     "typescript": "^3.9.5"
   },
   "optionalDependencies": {
