--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "install:spago": "spago install",
     "build": "run-s build:*",
     "build:tsc": "tsc -p src/LanguageServer/",
-    "build:server": "spago bundle-app  -t server.js -m LanguageServer.IdePurescript.Main"
+    "build:server": "spago bundle-app  -t server.js -m LanguageServer.IdePurescript.Main",
+    "format:js": "prettier --write ./{src,test}/**/*.{ts,js}"
   },
   "files": [
     "cli.js",
@@ -52,7 +53,7 @@
     "@types/node": "^16.9.6",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "typescript": "^3.9.5"
+    "typescript": "^4.5.2"
   },
   "optionalDependencies": {
     "purescript": "0.14.4",
