--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,11 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "tsc",
-      "command": "node",
-      "args": [
-        "./node_modules/typescript/lib/tsc.js",
-        "-w",
-        "-p",
-        "src/LanguageServer/tsconfig.json"
-      ],
+      "type": "npm",
+      "label": "watch:tsc",
+      "script": "watch:tsc",
+      "problemMatcher": ["$tsc-watch"],
+      "isBackground": true,
       "presentation": {
         "echo": true,
         "reveal": "silent",
@@ -20,12 +17,23 @@
         "showReuseMessage": true,
         "clear": false,
         "revealProblems": "always"
-      },
-      "runOptions": {
-        "runOn": "default"
-      },
+      }
+    },
+    {
+      "type": "npm",
+      "label": "watch:bundle",
+      "script": "watch:bundle",
+      "problemMatcher": ["$esbuild-watch"],
       "isBackground": true,
-      "problemMatcher": "$tsc-watch"
+      "presentation": {
+        "echo": true,
+        "reveal": "silent",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false,
+        "revealProblems": "always"
+      }
     }
   ]
 }
