--- a/package.json
+++ b/package.json
@@ -30,12 +30,18 @@
   "scripts": {
     "prepare": "run-s install:* build",
     "install:spago": "spago install",
-    "build": "run-s build:*",
+    "build": "run-s build:tsc build:spago build:bundle-min",
     "build:tsc": "tsc -p src/LanguageServer/",
-    "build:server": "spago bundle-app  -t server.js -m LanguageServer.IdePurescript.Main",
-    "format:js": "prettier --write ./{src,test}/**/*.{ts,js}"
+    "build:spago": "spago build",
+    "build:bundle": "esbuild --bundle --platform=node --outfile=bundle.js ./output/LanguageServer.IdePurescript.Main",
+    "build:bundle-min": "npm run build:bundle -- --minify --sourcemap --sources-content=false",
+    "watch:bundle": "npm run build:bundle -- --watch",
+    "watch:tsc": "npm run build:tsc -- --watch",
+    "format:js": "prettier --write ./{src,test}/**/*.{ts,js} && npm run build:tsc"
   },
   "files": [
+    "bundle.js",
+    "bundle.js.map",
     "cli.js",
     "server.js"
   ],
@@ -49,6 +55,7 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "esbuild": "^0.13.15",
     "@rowtype-yoga/prettier-plugin-purescript": "^1.11.2",
     "@types/node": "^16.9.6",
     "npm-run-all": "^4.1.5",
