WIP purs 0.15 esmodules updates

--- a/src/LanguageServer/tsconfig.json
+++ b/src/LanguageServer/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES5",    
+    "module": "ESNext",
+    "target": "ES5",
+    "moduleResolution": "NodeNext",
     "sourceMap": false,
     "noImplicitAny": true,
     "newLine": "LF",
