--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "esbuild": "^0.13.15",
     "@rowtype-yoga/prettier-plugin-purescript": "^1.11.2",
     "@types/node": "^16.9.6",
+    "esbuild": "^0.13.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.0-dev.20220211"
   }
 }
