--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build:bundle-deps": "npm run build:bundle -- --outfile=bundle.js ",
     "watch:bundle": "npm run build:bundle-nodeps -- --watch",
     "watch:tsc": "npm run build:tsc -- --watch",
-    "format:js": "prettier --write ./{src,test}/**/*.{ts,js} && npm run build:tsc"
+    "format:js": "prettier --write ./{src,test}/**/*.{ts,js} && npm run build:tsc",
+    "format:purs": "purs-tidy format-in-place src/**/*.purs"
   },
   "files": [
     "server.js"
@@ -46,11 +47,11 @@
     "which": "^2.0.2"
   },
   "devDependencies": {
-    "@rowtype-yoga/prettier-plugin-purescript": "^1.11.2",
     "@types/node": "^16.9.6",
     "esbuild": "^0.13.15",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
+    "purs-tidy": "^0.9.2",
     "typescript": "^4.8.0-dev.20220601"
   }
 }
